--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
                 <h4>We-dey-4u</h4>
             </a>
             <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="https://we-dey-4u-4life-if7p-git-main-we-dey-4-u.vercel.app/">Home</a></li>
     
                 <li><a href="about.html">About</a></li>
-                <li><a href="courses.html">Courses</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <button id="open-menu-btn"><i class="fas fa-bars"></i></button>
@@ -51,10 +50,10 @@
         <div class="container contact_container">
             <aside class="contact_aside">
                 <div class="aside_image">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSjapuB-Xs7o-q5XY6sH4Qke9EkDPVwxb4OCA&usqp=CAU" alt="">
+                    <img src="buybeta blue.png" alt="">
                 </div>
-                <h2>Contact Us</h2>
-                <p>no 8 ejiogu street</p>
+                <h2>Send Us Email</h2>
+                <p></p>
                 <ul class="contact_details">
                     <li>
                         <i class="fas fa-phone-alt"></i>
@@ -68,7 +67,7 @@
 
                     <li>
                         <i class="fal fa-map"></i>
-                        <h5>No 4 kolawole eboda off tipper ketu lagos</h5>
+                        <h5></h5>
                     </li>
 
                 </ul>
