--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Techs Educational Forum</title>
+    <title>D%D</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="contact.css" />
@@ -27,7 +27,7 @@
     <nav>
         <div class="container nav_container">
             <a style="margin-left: 5px; margin-top: 70px;" href="index.html">
-                <h4>We-dey-4u</h4>
+                <h4>D%D</h4>
             </a>
             <ul class="nav-menu">
                 <li><a href="https://we-dey-4u-4life-if7p-git-main-we-dey-4-u.vercel.app/">Home</a></li>
