--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h4>D%D</h4>
             </a>
             <ul class="nav-menu">
-                <li><a href="https://we-dey-4u-4life-if7p-git-main-we-dey-4-u.vercel.app/">Home</a></li>
+                <li><a href="https://we-dey-4u-4life-if7p-git-main-we-dey-4-u.vercel.app/">store</a></li>
     
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
