--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>D%D</title>
+    <title>Dukes%Dutches</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="contact.css" />
@@ -27,7 +27,7 @@
     <nav>
         <div class="container nav_container">
             <a style="margin-left: 5px; margin-top: 70px;" href="index.html">
-                <h4>D%D</h4>
+                <h4>Dukes%Dutches</h4>
             </a>
             <ul class="nav-menu">
                 <li><a href="https://we-dey-4u-4life-if7p-git-main-we-dey-4-u.vercel.app/">store</a></li>
@@ -57,12 +57,12 @@
                 <ul class="contact_details">
                     <li>
                         <i class="fas fa-phone-alt"></i>
-                        <h5>09052632663</h5>
+                        <h5>08061648132</h5>
                     </li>
                      
                     <li>
                         <i class="fal fa-envelope"></i>
-                        <h5>support@mrteks.com</h5>
+                        <h5>Dukeduchessng1@gmail.com</h5>
                     </li>
 
                     <li>
