--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 
                 <ul class="contact_socials">
                 
-                    <a href=""><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.facebook.com/share/hgi5x3MKEztwx8hd/?mibextid=K35XfP"><i class="fab fa-facebook-f"></i></a>
                     <a href=""><i class="fab fa-twitter"></i></a>
-                    <a href=""><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/mazidukeduchess?igsh=MndnZjJja2tzNzI0&utm_source=qr"><i class="fab fa-instagram"></i></a>
                     <a href=""><i class="fab fa-youtube"></i></a>
                 </ul>
             </aside>
@@ -88,7 +88,7 @@
                 <input type="text" name="First Name" placeholder="First Name" required>
                 <input type="text" name="Last Name" placeholder="Last Name" required>
             </div>
-              <input type="email" name="Email Address" placeholder="Your Email Address" required>
+              <input type="email" name="_replyto" placeholder="Your Email Address" required>
             <textarea name="message" rows="7" required placeholder="Your Message"></textarea>
             <button type="submit" class="btn btn-primary">Send Message</button>
             
